# simulado_crypto

./: .gitignore  README.md  coingecko.py  db.py  dependencies.py  main.py  pyproject.toml  schemas.py
app/: main.py
app/application/services/: auth_service.py  carteira_service.py  compra_service.py  historico_service.py  venda_service.py
app/domain/models/: schemas.py
app/infrastructure/: security.py
app/infrastructure/integrations/: coingecko.py
app/infrastructure/repositories/: carteira_repository.py  historico_repository.py  users_repository.py
app/presentation/: dependencies.py
app/presentation/controllers/: auth.py  carteira.py  compra.py  historico.py  venda.py
routes/: auth.py  carteira.py  compra.py  historico.py  venda.py
simulado_crypto.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
